# spot-on

./: .gitignore  README.md
docs/superpowers/plans/: 2026-03-18-metafide-spoton-mcp.md
docs/superpowers/specs/: 2026-03-18-metafide-spoton-mcp-design.md
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
mcp-server/__tests__/: api.test.ts  config.test.ts  rate-limit.test.ts  validation.test.ts
mcp-server/__tests__/tools/: configure-strategy.test.ts  get-balance.test.ts  place-position.test.ts  run-bot-cycle.test.ts
mcp-server/src/: api.ts  config.ts  index.ts
mcp-server/src/tools/: configure-strategy.ts  get-balance.ts  get-config.ts  get-game-status.ts  get-live-price.ts  get-results.ts  get-spot-game.ts  place-position.ts  run-bot-cycle.ts
mcp-server/src/utils/: rate-limit.ts  validation.ts
templates/C+/: CMakeLists.txt  config.hpp  main.cpp  request.cpp  runner.cpp  runner.hpp  spot.cpp  spot.hpp
templates/go/: config.go  go.mod  main.go  request.go  runner.go  spot.go
templates/javascript/: README.md  config.mjs  index.mjs  request.mjs  runner.mjs  spot.mjs
templates/python/: README.md  config.py  index.py  runner.py  spot.py
templates/ruby/: config.rb  index.rb  request.rb  runner.rb  spot.rb
